[package]
name = "twitter-rust-clone"
version = "0.1.0"
edition = "2021"
authors = ["Dennoh Peter <mail@dennohpeter.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = {version = "0.4.23", features = ["serde"]}
diesel = { version = "2.0.3", features = ["postgres", "chrono", "r2d2", "uuid"] }
env_logger = "0.10.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
uuid = {version = "1.3.0", features = ["serde", "v4"]}
